tests/NormalTests/paczka2/big_fuzzy/20442704.err
Error in line 1: JKmpR S608 59,4
Error in line 2: 26xwfU S608 60,4
Error in line 6: 3qTf8zScz S778 19,5
Error in line 20: JKmpR S778 -1,7
Error in line 15: 3qTf8zScz S401 24,0
Error in line 26: S608 S608 178,51
Error in line 19: JKmpR S778 16,7
Error in line 39: JKmpR S608 51,4
Error in line 46: coUevS S608 40,7
Error in line 41: O3lxx2 S608 91,3
Error in line 68: 26xwfU S778 45,6
Error in line 50: S608 S608 44,6
Error in line 69: 26xwfU S608 15,8
Error in line 59: 3qTf8zScz S778 90,0
Error in line 75: 3qTf8zScz S608 7,0
Error in line 74: 26xwfU A101 63,6
Error in line 76: 3qTf8zScz S778 55,0
Error in line 81: coUevS S778 327,9
Error in line 78: 26xwfU S401 54,7
Error in line 101: 3qTf8zScz S401 17,7
Error in line 64: O3lxx2 S608 175,5
Error in line 114: O3lxx2 S401 4,1
Error in line 120: sSh S401 13,8
Error in line 124: S608 S778 42,0
Error in line 70: JKmpR S608 42,9
Error in line 136: O3lxx2 S608 30,5
Error in line 151: S608 S608 38,0
Error in line 155: JKmpR S608 65,0
Error in line 167: O3lxx2 S401 34,3
Error in line 163: coUevS S608 32,8
Error in line 176: JKmpR S778 72,0
Error in line 182: O3lxx2 S608 334,59
Error in line 160: 26xwfU S608 7,8
Error in line 171: O3lxx2 S608 98,8
Error in line 192: JKmpR A101 37,6
Error in line 195: coUevS S608 41,5
Error in line 199: coUevS A101 28,3
Error in line 193: O3lxx2 S401 82,8
Error in line 205: sSh S778 26,65
Error in line 209: O3lxx2 S401 73,4
Error in line 215: O3lxx2 S778 89,7
Error in line 219: O3lxx2 S401 49,3
Error in line 227: 3qTf8zScz S401 76,87
Error in line 222: sSh S778 22,3
Error in line 228: 3qTf8zScz S401 352,8
Error in line 236: 3qTf8zScz A101 45,2
Error in line 246: JKmpR`A101`50,9
Error in line 247: JKmpR A101 233,1
